--- a/index.html
+++ b/index.html
@@ -43,82 +43,107 @@
         <!-- Main Content Sections -->
         <main class="main-content">
           <section id="geschiedenis" class="section section-1">
-            <h2>Geschiedenis</h2>
+            <h2>Geschiedenis Radio Intiem</h2>
             <div class="history-container">
-              <div class="history-intro">
-                <p class="history-subtitle">Van kleine lokale zender tot geliefde AM-station</p>
-                <p class="history-description">
-                  Radio Intiem heeft een rijke geschiedenis die teruggaat tot de jaren 70. Wat begon als een kleine lokale radiozender
-                  is uitgegroeid tot een geliefd AM-station dat elke zaterdag duizenden luisteraars bereikt met klassieke hits en
-                  Nederlandse muziek.
-                </p>
+              <div class="history-story">
+
+                <div class="story-block">
+                  <h3>Het begin</h3>
+                  <p>
+                    Radio Intiem is in 1984 opgezet door Cor Hendriks die al een (piraten-) radio verleden had met Radio Sunshine, later werden dat nog respectievelijk Radio Tornado, Radio One Hope, Radio 't Hof van Holland, Radio West en <b>last, but not least: Radio Intiem!</b>
+                  </p>
+                  <p>
+                    Deze laatste zender was tot circa 1995 in de lucht op de FM op verschillende frequenties.
+                  </p>
+                </div>
+
+                <div class="story-block">
+                  <h3>Overheid</h3>
+                  <p>
+                    Door het veranderende beleid van de overheid, door hele hoge boetes op te leggen, werd het de piratenzenders onmogelijk gemaakt om nog door te gaan met uitzenden. De reden hiervoor was om de weg vrij te maken voor de officiële regionale zenders als Radio West, WOS en Radio Rijnmond.
+                  </p>
+                  <div class="quote">
+                    "We fought the law, but the law won" (naar Sonny Curtis), maar anno 2025 is Radio Intiem wel legaal: "The Times They Are a-Changin'" (Bob Dylan).
+                  </div>
+                </div>
+
+                <div class="story-block">
+                  <h3>Ander geluid</h3>
+                  <p>
+                    Het concept was en is nu nog steeds: een ander geluid te laten horen dan wat de toenmalige piraten, legale regionale en Hilversumse zender(s) toen brachten dus zonder reclames, nieuwsberichten, filemeldingen etc.
+                  </p>
+                  <p>
+                    Met een muzikale mix van vooral <strong>Pop-Rock-Punk-New Wave-Country-Gouwe Ouwes-Nederbeat-Ska-Reggae</strong>, maar geen smartlappen, disco, rap, house, hardcore etc. (Een enkele uitzondering daargelaten, moet kunnen want we doen het ook voor de lol). Dat laten we graag over aan de andere stations.
+                  </p>
+                  <p>
+                    Nu dus legaal op de middengolf en ook via een stream te beluisteren.
+                  </p>
+                </div>
+
+                <div class="story-block">
+                  <h3>Waslijst van toenmalige DJs</h3>
+                  <div class="dj-list">
+                    <p>
+                      Dit waren de namen van de toenmalige dj's op Radio Intiem: <strong>Cor Hendriks, Johan Peters, Henk Hollander, Sjees van Puffelen, Dr. Cruel, Criquielion, Eddie Addict, Lies, Rudi V., The Fonz, de 2 Farmers.</strong>
+                    </p>
+                  </div>
+                  <div class="note">
+                    <strong>NB:</strong> In de nieuwe opzet keren Cor Hendriks en Eddie Addict (na te zijn afgekickt gaat hij nu door het leven als Kees Cornelissen) terug.
+                  </div>
+                  <p>
+                    Nieuw in het team zijn <strong>Van Dam, Ronald Bakker en Freek Valkhoff</strong>. Deze gasten hebben hun sporen reeds elders verdient bij diverse stations.
+                  </p>
+                </div>
+
               </div>
 
               <div class="timeline">
                 <div class="timeline-item">
-                  <div class="timeline-year">1975</div>
+                  <div class="timeline-year">1984</div>
                   <div class="timeline-content">
-                    <h3>De Geboorte van Radio Intiem</h3>
-                    <p>Een groep muziekliefhebbers richt Radio Intiem op als lokale zender. De eerste uitzendingen vinden plaats vanuit een kleine studio in het centrum van de stad.</p>
+                    <h3>Het Begin - Radio Intiem opgericht door Cor Hendriks</h3>
+                    <ul>
+                      <li>Cor had al ervaring met piratenzenders: Radio Sunshine, Radio Tornado, Radio One Hope, Radio 't Hof van Holland, Radio West</li>
+                    </ul>
                   </div>
                 </div>
 
                 <div class="timeline-item">
-                  <div class="timeline-year">1980</div>
+                  <div class="timeline-year">1984-1995</div>
                   <div class="timeline-content">
-                    <h3>Eerste AM-Licentie</h3>
-                    <p>Radio Intiem krijgt zijn eerste officiële AM-licentie en begint met regelmatige uitzendingen op 1008 KHZ. De zender wordt een vaste waarde in de regio.</p>
+                    <h3>De FM Jaren - Radio Intiem op de FM</h3>
+                    <ul>
+                      <li>DJ team: Cor Hendriks, Johan Peters, Henk Hollander, Sjees van Puffelen, Dr. Cruel, Criquielion, Eddie Addict, Lies, Rudi V., The Fonz, de 2 Farmers</li>
+                      <li>Concept: Ander geluid zonder reclames, nieuws of filemeldingen</li>
+                      <li>Muziek: Pop-Rock-Punk-New Wave-Country-Gouwe Ouwes-Nederbeat-Ska-Reggae</li>
+                    </ul>
                   </div>
                 </div>
 
                 <div class="timeline-item">
-                  <div class="timeline-year">1985</div>
+                  <div class="timeline-year">Circa 1995</div>
                   <div class="timeline-content">
-                    <h3>Uitbreiding van het Team</h3>
-                    <p>Het eerste team van diskjockey's wordt samengesteld. Elke DJ brengt zijn eigen muzikale voorkeur mee, wat zorgt voor een gevarieerd programma.</p>
-                  </div>
-                </div>
-
-                <div class="timeline-item">
-                  <div class="timeline-year">1990</div>
-                  <div class="timeline-content">
-                    <h3>Nieuwe Studio</h3>
-                    <p>Radio Intiem verhuist naar een moderne studio met betere apparatuur. De kwaliteit van de uitzendingen verbetert aanzienlijk en het bereik wordt uitgebreid.</p>
-                  </div>
-                </div>
-
-                <div class="timeline-item">
-                  <div class="timeline-year">2000</div>
-                  <div class="timeline-content">
-                    <h3>Focus op Zaterdag</h3>
-                    <p>Vanwege veranderende media-landschap besluit Radio Intiem zich te concentreren op zaterdag-uitzendingen. Dit wordt een groot succes.</p>
-                  </div>
-                </div>
-
-                <div class="timeline-item">
-                  <div class="timeline-year">2010</div>
-                  <div class="timeline-content">
-                    <h3>Digitale Modernisering</h3>
-                    <p>De studio wordt volledig gemoderniseerd met digitale apparatuur. De klassieke AM-uitzendingen blijven behouden voor de trouwe luisteraars.</p>
-                  </div>
-                </div>
-
-                <div class="timeline-item">
-                  <div class="timeline-year">2020</div>
-                  <div class="timeline-content">
-                    <h3>45 Jaar Radio Intiem</h3>
-                    <p>Radio Intiem viert zijn 45-jarig jubileum. Het station blijft trouw aan zijn roots: klassieke hits, Nederlandse muziek en persoonlijke presentatie.</p>
+                    <h3>Overheid grijpt in - Einde FM Uitzendingen</h3>
+                    <ul>
+                      <li>Hoge boetes voor piratenzenders</li>
+                      <li>Ruimte maken voor officiële regionale zenders (Radio West, WOS en Radio Rijnmond)</li>
+                      <li>"We fought the law, but the law won" (Sonny Curtis)</li>
+                    </ul>
                   </div>
                 </div>
 
                 <div class="timeline-item">
                   <div class="timeline-year">2025</div>
                   <div class="timeline-content">
-                    <h3>Heden</h3>
-                    <p>Radio Intiem blijft elke zaterdag uitzenden op AM 1008 KHZ. Met een trouwe schare luisteraars en een team van ervaren DJ's blijft het station een unieke plek in het Nederlandse radioklimaat.</p>
+                    <h3>Terugkeer - Radio Intiem nu legaal </h3>
+                    <ul>
+                      <li>Uitzendingen op middengolf + stream</li>
+                      <li>"The Times They Are a-Changin'" (Bob Dylan)</li>
+                      <li>Terugkerende DJ's: Cor Hendriks, Eddie Addict (nu Kees Cornelissen)</li>
+                      <li>Nieuwe DJ's: Van Dam, Ronald Bakker, Freek Valkhoff</li>
+                    </ul>
                   </div>
                 </div>
-              </div>
             </div>
           </section>
 
@@ -127,43 +152,49 @@
             <div class="schedule-container">
               <div class="schedule-header">
                 <h3>Zaterdag Programmering</h3>
-                <p class="schedule-subtitle">Elke zaterdag van 10:00 tot 20:00 op AM 1008 KHZ</p>
+                <p class="schedule-subtitle">Elke zaterdag van 07:00 tot 19:00 op AM 1008 KHZ</p>
               </div>
 
               <div class="schedule-grid">
                 <div class="schedule-item">
-                  <div class="time-slot">10:00 - 12:30</div>
+                  <div class="time-slot">07:00 - 09:00</div>
                   <div class="program-info">
-                    <h4 class="program-title">Morning Classics</h4>
-                    <p class="program-dj">met DJ Marco</p>
-                    <p class="program-description">Start je zaterdag met de beste klassieke rock en pop hits</p>
+                    <h4 class="program-title">Nonstop Muziek</h4>
                   </div>
                 </div>
 
                 <div class="schedule-item">
-                  <div class="time-slot">12:30 - 15:00</div>
+                  <div class="time-slot">09:00 - 11:00</div>
                   <div class="program-info">
-                    <h4 class="program-title">Nederlandse Hits</h4>
-                    <p class="program-dj">met DJ Lisa</p>
-                    <p class="program-description">De mooiste Nederlandse muziek van toen en nu</p>
+                    <h4 class="program-title">Cor Hendriks</h4>
                   </div>
                 </div>
 
                 <div class="schedule-item">
-                  <div class="time-slot">15:00 - 17:30</div>
+                  <div class="time-slot">11:00 - 13:00</div>
                   <div class="program-info">
-                    <h4 class="program-title">Jazz & Blues Hour</h4>
-                    <p class="program-dj">met DJ Frank</p>
-                    <p class="program-description">Ontspan met de beste jazz en blues muziek</p>
+                    <h4 class="program-title">Kees Cornelissen</h4>
                   </div>
                 </div>
 
                 <div class="schedule-item">
-                  <div class="time-slot">17:30 - 20:00</div>
+                  <div class="time-slot">13:00 - 15:00</div>
                   <div class="program-info">
-                    <h4 class="program-title">Disco Fever</h4>
-                    <p class="program-dj">met DJ Marie</p>
-                    <p class="program-description">Dans de middag weg met disco en funk klassiekers</p>
+                    <h4 class="program-title">Ronald Bakker</h4>
+                  </div>
+                </div>
+
+                <div class="schedule-item">
+                  <div class="time-slot">15:00 - 17:00</div>
+                  <div class="program-info">
+                    <h4 class="program-title">Van Dam</h4>
+                  </div>
+                </div>
+
+                <div class="schedule-item">
+                  <div class="time-slot">17:00 - 19:00</div>
+                  <div class="program-info">
+                    <h4 class="program-title">Nonstop Muziek</h4>
                   </div>
                 </div>
               </div>
@@ -175,7 +206,7 @@
                 </div>
                 <div class="broadcast-info">
                   <span class="broadcast-label">Elke zaterdag</span>
-                  <span class="broadcast-time">10:00 - 20:00</span>
+                  <span class="broadcast-time">07:00 - 19:00</span>
                 </div>
               </div>
             </div>
@@ -294,16 +325,8 @@
                   <div class="email-item">
                     <div class="email-icon">📧</div>
                     <div class="email-details">
-                      <h4>Algemene Vragen</h4>
-                      <a href="mailto:info@radiointiem.nl" class="email-link">info@radiointiem.nl</a>
-                    </div>
-                  </div>
-
-                  <div class="email-item">
-                    <div class="email-icon">🎵</div>
-                    <div class="email-details">
-                      <h4>Muziekverzoeken</h4>
-                      <a href="mailto:verzoeken@radiointiem.nl" class="email-link">verzoeken@radiointiem.nl</a>
+                      <h4>Algemene Vragen & Verzoeken</h4>
+                      <a href="mailto:radiointiem@gmail.com" class="email-link">radiointiem@gmail.com</a>
                     </div>
                   </div>
                 </div>
