added new photos

--- a/index.html
+++ b/index.html
@@ -166,35 +166,35 @@
                 <div class="schedule-item">
                   <div class="time-slot">09:00 - 11:00</div>
                   <div class="program-info">
-                    <h4 class="program-title">Cor Hendriks</h4>
+                    <h4 class="program-title">Cor Hendriks - Ochtendprogramma</h4>
                   </div>
                 </div>
 
                 <div class="schedule-item">
                   <div class="time-slot">11:00 - 13:00</div>
                   <div class="program-info">
-                    <h4 class="program-title">Kees Cornelissen</h4>
+                    <h4 class="program-title">Kees Cornelissen - Lunchprogramma </h4>
                   </div>
                 </div>
 
                 <div class="schedule-item">
                   <div class="time-slot">13:00 - 15:00</div>
                   <div class="program-info">
-                    <h4 class="program-title">Ronald Bakker</h4>
+                    <h4 class="program-title">Ronald Bakker - De Bakker show</h4>
                   </div>
                 </div>
 
                 <div class="schedule-item">
                   <div class="time-slot">15:00 - 17:00</div>
                   <div class="program-info">
-                    <h4 class="program-title">Van Dam</h4>
+                    <h4 class="program-title">Van Dam - Singles only </h4>
                   </div>
                 </div>
 
                 <div class="schedule-item">
                   <div class="time-slot">17:00 - 19:00</div>
                   <div class="program-info">
-                    <h4 class="program-title">Nonstop Muziek</h4>
+                    <h4 class="program-title">Freek Valkhof - Gouwe oude en rock and roll muziek</h4>
                   </div>
                 </div>
               </div>
@@ -218,60 +218,75 @@
               <div class="dj-grid">
                 <div class="dj-card">
                   <div class="dj-photo dj-photo-placeholder" data-dj="1">
-                    <span class="dj-placeholder-text">M</span>
+                    <span class="dj-placeholder-text">H</span>
                   </div>
                   <div class="dj-info">
-                    <h3 class="dj-name">DJ Marco</h3>
-                    <p class="dj-specialty">Classic Rock & Pop</p>
-                    <p class="dj-description">Met zijn passie voor klassieke hits en verhalen uit de gouden jaren.</p>
+                    <h3 class="dj-name">Cor Hendriks</h3>
+                    <p class="dj-specialty">Ochtendprogramma</p>
+                    <p class="dj-description">-</p>
                     <div class="dj-schedule">
                       <span class="schedule-label">Zaterdag:</span>
-                      <span class="schedule-time">10:00 - 12:30</span>
+                      <span class="schedule-time">09:00 - 11:00</span>
                     </div>
                   </div>
                 </div>
 
                 <div class="dj-card">
                   <div class="dj-photo dj-photo-placeholder" data-dj="2">
-                    <span class="dj-placeholder-text">L</span>
+                    <span class="dj-placeholder-text">C</span>
                   </div>
                   <div class="dj-info">
-                    <h3 class="dj-name">DJ Lisa</h3>
-                    <p class="dj-specialty">Nederlandse Hits</p>
-                    <p class="dj-description">De koningin van de Nederlandse muziek met een warme stem.</p>
+                    <h3 class="dj-name">Kees Cornelissen</h3>
+                    <p class="dj-specialty">Lunchprogramma</p>
+                    <p class="dj-description">-</p>
                     <div class="dj-schedule">
                       <span class="schedule-label">Zaterdag:</span>
-                      <span class="schedule-time">12:30 - 15:00</span>
+                      <span class="schedule-time">11:00 - 13:00</span>
                     </div>
                   </div>
                 </div>
 
                 <div class="dj-card">
                   <div class="dj-photo dj-photo-placeholder" data-dj="3">
-                    <span class="dj-placeholder-text">F</span>
+                    <span class="dj-placeholder-text">B</span>
                   </div>
                   <div class="dj-info">
-                    <h3 class="dj-name">DJ Frank</h3>
-                    <p class="dj-specialty">Jazz & Blues</p>
-                    <p class="dj-description">Een echte muziekliefhebber met kennis van jazz en blues.</p>
+                    <h3 class="dj-name">Ranald Bakker</h3>
+                    <p class="dj-specialty">De Bakker show</p>
+                    <p class="dj-description">-</p>
                     <div class="dj-schedule">
                       <span class="schedule-label">Zaterdag:</span>
-                      <span class="schedule-time">15:00 - 17:30</span>
+                      <span class="schedule-time">13:00 - 17:00</span>
                     </div>
                   </div>
                 </div>
 
                 <div class="dj-card">
                   <div class="dj-photo dj-photo-placeholder" data-dj="4">
-                    <span class="dj-placeholder-text">M</span>
+                    <span class="dj-placeholder-text">D</span>
                   </div>
                   <div class="dj-info">
-                    <h3 class="dj-name">DJ Marie</h3>
-                    <p class="dj-specialty">Disco & Funk</p>
-                    <p class="dj-description">Brengt de dansvloer tot leven met disco en funk klassiekers.</p>
+                    <h3 class="dj-name">Van Dam</h3>
+                    <p class="dj-specialty">Singles only</p>
+                    <p class="dj-description">-</p>
                     <div class="dj-schedule">
                       <span class="schedule-label">Zaterdag:</span>
-                      <span class="schedule-time">17:30 - 20:00</span>
+                      <span class="schedule-time">15:00 - 17:00</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="dj-card">
+                  <div class="dj-photo dj-photo-placeholder" data-dj="4">
+                    <span class="dj-placeholder-text">V</span>
+                  </div>
+                  <div class="dj-info">
+                    <h3 class="dj-name">Freek Valkhof</h3>
+                    <p class="dj-specialty">Gouwe oude en rock and roll</p>
+                    <p class="dj-description">-</p>
+                    <div class="dj-schedule">
+                      <span class="schedule-label">Zaterdag:</span>
+                      <span class="schedule-time">17:00 - 19:00</span>
                     </div>
                   </div>
                 </div>
@@ -283,29 +298,32 @@
             <h2>Fotoalbum</h2>
             <div class="photo-album">
               <div class="photo-grid">
-                <div class="photo-item" data-image="album/antique-radio-6867832_640.jpg">
-                  <img src="album/antique-radio-6867832_640.jpg" alt="Antique Radio" loading="lazy" />
+                <div class="photo-item" data-image="album/20241016_123421.jpg">
+                  <img src="album/20241016_123421.jpg" alt="" loading="lazy" />
                 </div>
-                <div class="photo-item" data-image="album/antiques-4274012_640.jpg">
-                  <img src="album/antiques-4274012_640.jpg" alt="Antiques Collection" loading="lazy" />
+                <div class="photo-item" data-image="album/20241016_173942.jpg">
+                  <img src="album/20241016_173942.jpg" alt="" loading="lazy" />
                 </div>
-                <div class="photo-item" data-image="album/old-radio-1663517_640.jpg">
-                  <img src="album/old-radio-1663517_640.jpg" alt="Old Radio" loading="lazy" />
+                <div class="photo-item" data-image="album/20251212_092503.jpg">
+                  <img src="album/20251212_092503.jpg" alt="" loading="lazy" />
                 </div>
-                <div class="photo-item" data-image="album/radio-1547786_640.jpg">
-                  <img src="album/radio-1547786_640.jpg" alt="Classic Radio" loading="lazy" />
+                <div class="photo-item" data-image="album/20251212_093325.jpg">
+                  <img src="album/20251212_093325.jpg" alt="" loading="lazy" />
                 </div>
-                <div class="photo-item" data-image="album/radio-2224443_640.jpg">
-                  <img src="album/radio-2224443_640.jpg" alt="Vintage Radio" loading="lazy" />
+                <div class="photo-item" data-image="album/IMG-20240215-WA0003.jpg">
+                  <img src="album/IMG-20240215-WA0003.jpg" alt="" loading="lazy" />
                 </div>
-                <div class="photo-item" data-image="album/radio-4292411_640.jpg">
-                  <img src="album/radio-4292411_640.jpg" alt="Retro Radio" loading="lazy" />
+                <div class="photo-item" data-image="album/IMG-20240222-WA0003.jpg">
+                  <img src="album/IMG-20240222-WA0003.jpg" alt="" loading="lazy" />
                 </div>
-                <div class="photo-item" data-image="album/radio-5045924_640.jpg">
-                  <img src="album/radio-5045924_640.jpg" alt="Radio Equipment" loading="lazy" />
+                <div class="photo-item" data-image="album/IMG-20241028-WA0001.jpeg">
+                  <img src="album/IMG-20241028-WA0001.jpeg" alt="" loading="lazy" />
                 </div>
-                <div class="photo-item" data-image="album/transistor-1064568_640.jpg">
-                  <img src="album/transistor-1064568_640.jpg" alt="Transistor Radio" loading="lazy" />
+                <div class="photo-item" data-image="album/20251208_151516.jpg">
+                  <img src="album/20251208_151516.jpg" alt="" loading="lazy" />
+                </div>
+                <div class="photo-item" data-image="album/logo.jpg">
+                  <img src="album/logo.jpg" alt="" loading="lazy" />
                 </div>
               </div>
             </div>
