team en programmering gewijzigd

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <ul class="nav-list">
             <li><a href="#geschiedenis" class="nav-link">Geschiedenis</a></li>
             <li><a href="#uitzenddagen" class="nav-link">Uitzenddagen</a></li>
-            <li><a href="#dj-s" class="nav-link">DJ's</a></li>
+            <li><a href="#dj-s" class="nav-link">Het team</a></li>
             <li><a href="#fotoalbum" class="nav-link">Fotoalbum</a></li>
             <li><a href="#contact" class="nav-link">Contact</a></li>
           </ul>
@@ -137,6 +137,7 @@
                   <div class="timeline-content">
                     <h3>Terugkeer - Radio Intiem nu legaal </h3>
                     <ul>
+                      <li>22 november eerste officiële legale uitzending!</li>
                       <li>Uitzendingen op middengolf + stream</li>
                       <li>"The Times They Are a-Changin'" (Bob Dylan)</li>
                       <li>Terugkerende DJ's: Cor Hendriks, Eddie Addict (nu Kees Cornelissen)</li>
@@ -150,6 +151,18 @@
           <section id="uitzenddagen" class="section section-2">
             <h2>Uitzenddagen</h2>
             <div class="schedule-container">
+              <div class="schedule-header">
+                <h3>Vrijdag Programmering</h3>
+                <p class="schedule-subtitle">Vrijdagmiddag te beluisteren via de stream</p>
+              </div>
+              <div class="schedule-grid">
+                <div class="schedule-item">
+                  <div class="time-slot">12:00 - 00:00</div>
+                  <div class="program-info">
+                    <h4 class="program-title">Nonstop Muziek</h4>
+                  </div>
+                </div>
+              </div>
               <div class="schedule-header">
                 <h3>Zaterdag Programmering</h3>
                 <p class="schedule-subtitle">Elke zaterdag van 07:00 tot 19:00 op AM 1008 KHZ</p>
@@ -173,7 +186,7 @@
                 <div class="schedule-item">
                   <div class="time-slot">11:00 - 13:00</div>
                   <div class="program-info">
-                    <h4 class="program-title">Kees Cornelissen - Lunchprogramma </h4>
+                    <h4 class="program-title">Freek Valkhof - Goude oude </h4>
                   </div>
                 </div>
 
@@ -194,7 +207,7 @@
                 <div class="schedule-item">
                   <div class="time-slot">17:00 - 19:00</div>
                   <div class="program-info">
-                    <h4 class="program-title">Freek Valkhof - Gouwe oude en rock and roll muziek</h4>
+                    <h4 class="program-title">Kees Cornelissen - Progressieve show</h4>
                   </div>
                 </div>
               </div>
@@ -213,7 +226,7 @@
           </section>
 
           <section id="dj-s" class="section section-3">
-            <h2>Onze Diskjockey's</h2>
+            <h2>Het team</h2>
             <div class="dj-showcase">
               <div class="dj-grid">
                 <div class="dj-card">
@@ -232,12 +245,12 @@
                 </div>
 
                 <div class="dj-card">
-                  <div class="dj-photo dj-photo-placeholder" data-dj="2">
-                    <span class="dj-placeholder-text">C</span>
+                  <div class="dj-photo dj-photo-placeholder" data-dj="5">
+                    <span class="dj-placeholder-text">V</span>
                   </div>
                   <div class="dj-info">
-                    <h3 class="dj-name">Kees Cornelissen</h3>
-                    <p class="dj-specialty">Lunchprogramma</p>
+                    <h3 class="dj-name">Freek Valkhof</h3>
+                    <p class="dj-specialty">Gouwe oude</p>
                     <p class="dj-description">-</p>
                     <div class="dj-schedule">
                       <span class="schedule-label">Zaterdag:</span>
@@ -277,17 +290,28 @@
                 </div>
 
                 <div class="dj-card">
-                  <div class="dj-photo dj-photo-placeholder" data-dj="4">
-                    <span class="dj-placeholder-text">V</span>
+                  <div class="dj-photo dj-photo-placeholder" data-dj="2">
+                    <span class="dj-placeholder-text">C</span>
                   </div>
                   <div class="dj-info">
-                    <h3 class="dj-name">Freek Valkhof</h3>
-                    <p class="dj-specialty">Gouwe oude en rock and roll</p>
+                    <h3 class="dj-name">Kees Cornelissen</h3>
+                    <p class="dj-specialty">Progressieve show</p>
                     <p class="dj-description">-</p>
                     <div class="dj-schedule">
                       <span class="schedule-label">Zaterdag:</span>
                       <span class="schedule-time">17:00 - 19:00</span>
                     </div>
+                  </div>
+                </div>
+
+                <div class="dj-card">
+                  <div class="dj-photo dj-photo-placeholder" data-dj="6">
+                    <span class="dj-placeholder-text">H</span>
+                  </div>
+                  <div class="dj-info">
+                    <h3 class="dj-name">Henk Hollander</h3>
+                    <p class="dj-specialty">Technicus</p>
+                    
                   </div>
                 </div>
               </div>
