vlag toegevoegd & fotoalbum veranderingen

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               </div>
               <div class="schedule-grid">
                 <div class="schedule-item">
-                  <div class="time-slot">12:00 - 00:00</div>
+                  <div class="time-slot">14:00 - 00:00</div>
                   <div class="program-info">
                     <h4 class="program-title">Nonstop Muziek</h4>
                   </div>
@@ -186,7 +186,7 @@
                 <div class="schedule-item">
                   <div class="time-slot">11:00 - 13:00</div>
                   <div class="program-info">
-                    <h4 class="program-title">Freek Valkhof - Goude oude </h4>
+                    <h4 class="program-title">Freek Valkhof - Gouwe oude </h4>
                   </div>
                 </div>
 
@@ -373,6 +373,23 @@
                   </div>
                 </div>
               </div>
+
+              <div class="contact-container">
+                <div class="contact-info">
+                  <h3>MyTuner Radio</h3>
+                  <p class="contact-description">
+                    Je kan ons ook beluisteren via MyTunerRadio: 
+                  </p>
+  
+                  <div class="email-info">
+                    <div class="email-item">
+                      <div class="email-details">
+                        <h4>URL:</h4>
+                        <a href="https://mytuner-radio.com/nl/radio/radio-intiem-516569/" class="email-link">www.mytuner-radio.com</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
           </section>
 
