--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
 
         <!-- Sticky Navigation Menu -->
         <nav class="sticky-nav">
-          <ul class="nav-list">
+          <button class="hamburger-menu" id="hamburger-btn" aria-label="Toggle menu">
+            <span class="hamburger-line"></span>
+            <span class="hamburger-line"></span>
+            <span class="hamburger-line"></span>
+          </button>
+          <ul class="nav-list" id="nav-menu">
             <li><a href="#geschiedenis" class="nav-link">Geschiedenis</a></li>
             <li><a href="#uitzenddagen" class="nav-link">Uitzenddagen</a></li>
             <li><a href="#dj-s" class="nav-link">Het team</a></li>
