added new images

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <strong>NB:</strong> In de nieuwe opzet keren Cor Hendriks en Eddie Addict (na te zijn afgekickt gaat hij nu door het leven als Kees Cornelissen) terug.
                   </div>
                   <p>
-                    Nieuw in het team zijn <strong>Van Dam, Ronald Bakker en Freek Valkhoff</strong>. Deze gasten hebben hun sporen reeds elders verdient bij diverse stations.
+                    Nieuw in het team zijn <strong>Theo van Dam, Ronald Bakker en Freek Valkhoff</strong>. Deze gasten hebben hun sporen reeds elders verdient bij diverse stations.
                   </p>
                 </div>
 
@@ -146,7 +146,7 @@
                       <li>Uitzendingen op middengolf + stream</li>
                       <li>"The Times They Are a-Changin'" (Bob Dylan)</li>
                       <li>Terugkerende DJ's: Cor Hendriks, Eddie Addict (nu Kees Cornelissen)</li>
-                      <li>Nieuwe DJ's: Van Dam, Ronald Bakker, Freek Valkhoff</li>
+                      <li>Nieuwe DJ's: Theo van Dam, Ronald Bakker, Freek Valkhoff</li>
                     </ul>
                   </div>
                 </div>
@@ -205,7 +205,7 @@
                 <div class="schedule-item">
                   <div class="time-slot">15:00 - 17:00</div>
                   <div class="program-info">
-                    <h4 class="program-title">Van Dam - Singles only </h4>
+                    <h4 class="program-title">Theo van Dam - Singles only </h4>
                   </div>
                 </div>
 
@@ -221,10 +221,12 @@
                 <div class="frequency-info">
                   <span class="frequency-label">Luister op:</span>
                   <span class="frequency-value">AM 1008 KHZ</span>
+                  <span class="frequency-value">Stream</span>
                 </div>
                 <div class="broadcast-info">
-                  <span class="broadcast-label">Elke zaterdag</span>
-                  <span class="broadcast-time">07:00 - 19:00</span>
+                  <span class="broadcast-label"></span>
+                  <span class="broadcast-time">Zaterdag 07:00 - 19:00</span>
+                  <span class="broadcast-time">Vrijdag & zaterdag</span>
                 </div>
               </div>
             </div>
@@ -284,7 +286,7 @@
                     <span class="dj-placeholder-text">D</span>
                   </div>
                   <div class="dj-info">
-                    <h3 class="dj-name">Van Dam</h3>
+                    <h3 class="dj-name">Theo van Dam</h3>
                     <p class="dj-specialty">Singles only</p>
                     <p class="dj-description">-</p>
                     <div class="dj-schedule">
@@ -327,11 +329,11 @@
             <h2>Fotoalbum</h2>
             <div class="photo-album">
               <div class="photo-grid">
-                <div class="photo-item" data-image="album/20241016_123421.jpg">
-                  <img src="album/20241016_123421.jpg" alt="" loading="lazy" />
+                <div class="photo-item" data-image="album/IMG-20260219-WA0000.jpg">
+                  <img src="album/IMG-20260219-WA0000.jpg" alt="" loading="lazy" />
                 </div>
-                <div class="photo-item" data-image="album/20241016_173942.jpg">
-                  <img src="album/20241016_173942.jpg" alt="" loading="lazy" />
+                <div class="photo-item" data-image="album/IMG-20260219-WA0001.jpg">
+                  <img src="album/IMG-20260219-WA0001.jpg" alt="" loading="lazy" />
                 </div>
                 <div class="photo-item" data-image="album/20251212_092503.jpg">
                   <img src="album/20251212_092503.jpg" alt="" loading="lazy" />
@@ -342,8 +344,8 @@
                 <div class="photo-item" data-image="album/IMG-20240215-WA0003.jpg">
                   <img src="album/IMG-20240215-WA0003.jpg" alt="" loading="lazy" />
                 </div>
-                <div class="photo-item" data-image="album/IMG-20240222-WA0003.jpg">
-                  <img src="album/IMG-20240222-WA0003.jpg" alt="" loading="lazy" />
+                <div class="photo-item" data-image="album/Afbeelding (164).jpg">
+                  <img src="album/Afbeelding (164).jpg" alt="" loading="lazy" />
                 </div>
                 <div class="photo-item" data-image="album/IMG-20241028-WA0001.jpeg">
                   <img src="album/IMG-20241028-WA0001.jpeg" alt="" loading="lazy" />
